--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul>
           <li>Качественно и локанично</li>
           <li>Просто и удобно</li>
-          <li>Красиво и удобно</li>
+          <li>Красиво и быстро</li>
       </ul>
 
       <h2>Программирование</h2>
