--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <h2>Программирование</h2>
       <p>Программированием занимаюсь около двух лет,
-         знаю js, pascal, а также работал с python и c++.</p>
+         знаю js, pascal,python и c++.</p>
 
     <h2>Связь</h2>     
     <p>Почта - gadzhimuradov.mukhammed@bk.ru 
